fix: adjust bio scrollbar width

--- a/src/css/artist-details-modal/artist-modal-about.css
+++ b/src/css/artist-details-modal/artist-modal-about.css
@@ -53,7 +53,7 @@
 }
 
 .about-artist__info-item--bio::-webkit-scrollbar {
-  width: 3%;
+  width: 3px;
 }
 
 .about-artist__info-item--bio::-webkit-scrollbar-track {
